--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-tagsinput": "^3.19.0",
+    "react-twitter-auth": "^0.0.12",
     "react-with-breakpoints": "^2.0.2",
     "reactstrap": "^5.0.0",
     "redux": "^4.0.0",
