--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-facebook-login": "^4.0.1",
     "react-google-oauth": "^1.0.0",
     "react-icons": "^2.2.7",
+    "react-infinite-scroller": "^1.1.4",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-search-input": "^0.11.3",
     "react-tagsinput": "^3.19.0",
     "react-twitter-auth": "^0.0.12",
     "react-with-breakpoints": "^2.0.2",
